--- a/pom.xml
+++ b/pom.xml
@@ -6,12 +6,27 @@
 
     <groupId>me.lemurxd.skyblockplugin</groupId>
     <artifactId>untitled</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>0.0</version>
 
     <properties>
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+
+    <repositories>
+        <repository>
+            <id>papermc-repo</id>
+            <url>https://repo.papermc.io/repository/maven-public/</url>
+        </repository>
+    </repositories>
+
+    <dependencies>
+        <dependency>
+            <groupId>io.papermc.paper</groupId>
+            <artifactId>paper-api</artifactId>
+            <version>1.21.11-R0.1-SNAPSHOT</version>
+            <scope>provided</scope> </dependency>
+    </dependencies>
 
 </project>
